--- a/index.html
+++ b/index.html
@@ -19,15 +19,23 @@
 <div class="hidden-content">
     <div class="demo-wrapper">
         <div class="demo">
-            <div class="flex-items">
-                <div class="flex-item"></div>
-                <div class="flex-item"></div>
-                <div class="flex-item"></div>
-                <div class="flex-item"></div>
+            <div class="demo__view">
+              <div class="parent">
+                  <div class="child"></div>
+                  <div class="child"></div>
+                  <div class="child child--featured"></div>
+                  <div class="child"></div>
+              </div>
             </div>
+
+            <div class="demo__code" spellcheck="false"></div>
         </div>
     </div>
+
+
 </div>
+
+
 
 <script src="./assets/js/data.js"></script>
 <script src="./assets/js/bliss.min.js"></script>
