--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8">
@@ -31,14 +32,13 @@
             <div class="demo__code" spellcheck="false"></div>
         </div>
     </div>
-
-
 </div>
 
 
 
 <script src="./assets/js/data.js"></script>
 <script src="./assets/js/bliss.min.js"></script>
+<!-- <script src="./assets/js/tinylib.js"></script> -->
 <script src="./assets/js/script.js"></script>
 </body>
 </html>
