bliss.js -> tinylib.js

--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
 
 
 <script src="./assets/js/data.js"></script>
-<script src="./assets/js/bliss.min.js"></script>
-<!-- <script src="./assets/js/tinylib.js"></script> -->
+<script src="./assets/js/tinylib.js"></script>
 <script src="./assets/js/script.js"></script>
 </body>
 </html>
