Add links to twitter & github

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <aside class="l-aside">
 
     </aside>
-
 </div>
 
 <div class="hidden-content">
@@ -31,6 +30,11 @@
 
             <div class="demo__code" spellcheck="false"></div>
         </div>
+    </div>
+
+    <div class="project-links">
+      <a href="https://github.com/yoksel/flex-cheatsheet" class="project-link project-link--git" title="Project on github">Project on github</a>
+      <a href="https://twitter.com/yoksel_en" class="project-link project-link--twitter" title="Twitter @yoksel_en">@yoksel_en</a>
     </div>
 </div>
 
