Add themes & theme switcher

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Flexbox Cheatsheet</title>
     <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 <body>
-
+<h1 class="visually-hidden">Flexbox Cheat Sheet</h1>
 <div class="l-wrapper">
     <main class="l-main">
 
