Update tinylib; fix hidden title

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 <body>
-<h1 class="visually-hidden">Flexbox Cheat Sheet</h1>
+<h1 class="visually-hidden">Flexbox Cheatsheet</h1>
 <div class="l-wrapper">
     <main class="l-main">
 
