--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
             <a href="https://github.com/yoksel/flex-cheatsheet/" class="project-link project-link--git" title="Project on github">Project on github</a>
             <a href="https://twitter.com/yoksel_en" class="project-link project-link--twitter" title="Twitter @yoksel_en">@yoksel_en</a>
           </div>
+
+          <p
+            class="
+              page-aside__clarification
+              page-aside__container
+            ">All text content belongs to <a href="http://www.w3.org/TR/css-flexbox-1/">W3C CSS Flexbox Specification</a>,<br>I only added interactive demos</p>
         </div>
       </aside>
     </div>
