--- a/src/index-tmpl.html
+++ b/src/index-tmpl.html
@@ -31,6 +31,12 @@
             <a href="<%= htmlWebpackPlugin.options.GITHUB %>" class="project-link project-link--git" title="Project on github">Project on github</a>
             <a href="https://twitter.com/yoksel_en" class="project-link project-link--twitter" title="Twitter @yoksel_en">@yoksel_en</a>
           </div>
+
+          <p
+            class="
+              page-aside__clarification
+              page-aside__container
+            "><%= htmlWebpackPlugin.options.CLARIFICATION %></p>
         </div>
       </aside>
     </div>
