Add class notranslate to some elements to prevent translating their content

--- a/src/index-tmpl.html
+++ b/src/index-tmpl.html
@@ -44,7 +44,7 @@
     <button class="theme-control" type="button">Change theme</button>
 
     <template id="demo-tmpl">
-      <div class="demo">
+      <div class="demo notranslate">
         <div class="demo__content">
           <div class="demo__view">
             <div class="parent">
